<resources>
    <string name="app_name">NutsPedia</string>
    <string name="nuts_name">Nuts Name</string>
    <string name="description">Description</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="nuts_image">Nuts Image</string>
    <string name="email">wildghifari@gmail.com</string>
    <string name="github">Link to Github</string>
    <string name="dribbble">Link to Dribbble</string>
    <string name="chatMe">Chat With Me</string>
    <string name="WA">Link to WhatsApp</string>
    <string name="about">
        Hi! My name is Wildan Ghifari, i am a Graphic Designer, UI/UX Designer and
        Web Developer based in Jakarta. I have a working experience as a Grapihc and UI/UX Designer
        for more than 4 years, one year as a Full-stack Developer. I\'ve been freelancing for more
        than 2 years. Let\'s make something great together.
    </string>
    <string name="profile_name">Wildan Ghifari</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="position">Web Designer &amp; Developer</string>
    <string name="about_menu">About</string>
    <string name="title_about">About</string>
    <string name="tools_dev">Design &amp; Development Tools</string>
    <string name="skills_dev">Design &amp; Development Skills</string>
    <string name="tools1"><ul><li>Figma</li></ul></string>
    <string name="tools2"><ul><li>Framer</li></ul></string>
    <string name="tools3"><ul><li>Webflow</li></ul></string>
    <string name="tools4"><ul><li>Whimsical</li></ul></string>
    <string name="tools5"><ul><li>Blender 3D</li></ul></string>
    <string name="tools6"><ul><li>Photoshop</li></ul></string>
    <string name="tools7"><ul><li>Git/Github</li></ul></string>
    <string name="tools8"><ul><li>Intelij IDEA</li></ul></string>
    <string name="tools9"><ul><li>Android Studio</li></ul></string>
    <string name="tools10"><ul><li>Visual Studio Code</li></ul></string>
    <string name="skill1"><ul><li>Product Design</li></ul></string>
    <string name="skill2"><ul><li>UI/UX Design</li></ul></string>
    <string name="skill3"><ul><li>Prototyping</li></ul></string>
    <string name="skill4"><ul><li>3D Design</li></ul></string>
    <string name="skill5"><ul><li>Graphic Design</li></ul></string>
    <string name="skill6"><ul><li>Web Development</li></ul></string>
    <string name="skill7"><ul><li>Webflow Development</li></ul></string>
    <string name="skill8"><ul><li>HTML5/CSS3/JavaScript</li></ul></string>
    <string name="skill9"><ul><li>Bootstrap/Tailwind</li></ul></string>
    <string name="skill10"><ul><li>App Development</li></ul></string>
    <string name="nutspedia">NutsPedia</string>
    <string name="icon_nutspedia_for_splashscreen">icon NutsPedia for SplashScreen</string>
    <string name="nuts_picture">Nuts Picture</string>
</resources>