<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="17dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="24dp"
                app:cardCornerRadius="25dp">

                <RelativeLayout
                    android:id="@+id/profileContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/profile_picture"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_wildan" />

                    <RelativeLayout
                        android:id="@+id/profile_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@id/profile_image">

                        <TextView
                            android:id="@+id/tv_profileName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_name"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_profilePosition"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_profileName"
                            android:text="@string/email"
                            android:textSize="12sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_profilePosition"
                            android:layout_marginTop="32dp"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/email"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:layout_marginVertical="12dp"
                                android:layout_marginEnd="12dp"
                                android:contentDescription="@string/email"
                                android:scaleType="centerCrop"
                                android:backgroundTint="@color/white"
                                android:src="@drawable/envelope" />

                            <ImageButton
                                android:id="@+id/github"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:layout_marginVertical="12dp"
                                android:layout_marginEnd="12dp"
                                android:contentDescription="@string/github"
                                android:scaleType="centerCrop"
                                android:backgroundTint="@color/white"
                                android:src="@drawable/github" />

                            <ImageButton
                                android:id="@+id/dribbble"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:layout_marginVertical="12dp"
                                android:layout_marginEnd="12dp"
                                android:contentDescription="@string/dribbble"
                                android:scaleType="centerCrop"
                                android:backgroundTint="@color/white"
                                android:src="@drawable/dribbble"/>

                        </LinearLayout>
                    </RelativeLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_about_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/about"
                android:textSize="14sp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="24dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/tv_subtitle_tool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/tools_dev"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp">

                <TableRow>

                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/tools1" />

                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/tools6" />
                </TableRow>

                <TableRow>
                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/tools2"/>
                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/tools7"/>
                </TableRow>

                <TableRow>
                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/tools3"/>
                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/tools8"/>
                </TableRow>

                <TableRow>
                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/tools4"/>
                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/tools9"/>
                </TableRow>

                <TableRow>
                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/tools5"/>
                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/tools10"/>
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/tv_subtitle_skill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/skills_dev"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64dp">

                <TableRow>
                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/skill1"/>

                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/skill6"/>
                </TableRow>

                <TableRow>
                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/skill2"/>

                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/skill7"/>
                </TableRow>

                <TableRow>
                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/skill3"/>

                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/skill8"/>
                </TableRow>

                <TableRow>
                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/skill4"/>

                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/skill9"/>
                </TableRow>

                <TableRow>
                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/skill5"/>

                    <TextView
                        style="@style/TextStd.List"
                        android:layout_height="20dp"
                        android:text="@string/skill10"/>
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/chatMe"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>