<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginBottom="32dp"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@string/nuts_name"/>

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:textSize="14sp"
            android:lineSpacingMultiplier="1.5"
            tools:text="@string/description"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp">

            <Button
                android:id="@+id/btn_share"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_weight="1"
                android:layout_centerVertical="true"
                android:text="@string/share"
                android:textSize="16sp"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>